--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "framer-motion": "^11.2.10",
+    "@fontsource-variable/heebo": "^5.0.22",
+    "@fontsource/poppins": "^5.0.14",
+    "@tanstack/react-query": "^5.51.11",
+    "axios": "^1.7.2",
+    "framer-motion": "^10.18.0",
+    "jodit-react": "^4.1.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
