--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "jodit-react": "^4.1.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "styled-components": "^5.3.3",
     "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
