--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jodit-react": "^4.1.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "phaser": "^3.80.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
